Refactored searching and added some test

--- a/plugin.xml
+++ b/plugin.xml
@@ -2,24 +2,21 @@
 <?eclipse version="3.4"?>
 <plugin>
 
-   <extension point="org.eclipse.ui.actionSets">
-      <actionSet label="Sample Action Set" visible="true" id="Browse.actionSet">
-         <action 
-               label="Sample Action" 
-         	   icon="icons/sample.gif"
-               class="browse.actions.SampleAction" 
-               id="browse.actions.SampleAction"
-               definitionId="org.eclipse.ui.browse.find">
-         </action>
-      </actionSet>
-   </extension>
    <extension point="org.eclipse.ui.commands">
-   	<command id="browse.command.SampleCommand" name="Browse" defaultHandler="browse.command.SampleCommand"> 	
+   	<command
+          categoryId="org.eclipse.jdt.ui.category.source"
+          defaultHandler="browse.command.BrowseInputTemplateCommand"
+          description="Open Input Template"
+          id="browse.command.BrowseInputTemplateCommand"
+          name="Browse"> 	
 	</command>
    </extension>
    
    <extension point="org.eclipse.ui.bindings">
-      <key sequence="Ctrl+I" commandId="browse.command.SampleCommand" schemeId="org.eclipse.ui.defaultAcceleratorConfiguration">
+      <key
+            commandId="browse.command.BrowseInputTemplateCommand"
+            schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
+            sequence="Ctrl+Shift+I">
 	  </key>
    </extension>
 
