--- a/plugin.xml
+++ b/plugin.xml
@@ -22,6 +22,7 @@
    <extension point="org.eclipse.ui.bindings">
       <key
             commandId="pp.eclipse.command.OpenInputTemplateCommand"
+            contextId="org.eclipse.ui.contexts.window"
             schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
             sequence="M1+Shift+I">
 	  </key>
